# Adventure_works_pipeline

./: oi.md  pyproject.toml
app/: main.py
app/pipe/: conect_data_base.py  extract_table_in_schema.py  list_schema.py  list_table.py
