[tool.poetry]
name = "adventure-works"
version = "0.1.0"
description = ""
authors = ["victorthecreative <vitaopoter@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
psycopg2 = "^2.9.9"
pandas = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
